# data-stewardship-unit

./: .envrc  .gitignore  .gitmodules  .nojekyll  .pre-commit-config.yaml  .quartoignore  AGENTS.html  CONTENT_ROUTING_POLICY.md  CONTRIBUTING.html  CONTRIBUTING.md  README.md  UAT_REPORT.md  UAT_REVIEW_2026-02-17.md  _quarto-english.yml  _quarto-french.yml  _quarto.yml  about.html  about.qmd  bibliography.bib  content-routing-inventory-2026-02-18.md  data-stewardship-unit.Rproj  devenv.nix  dsu_documentation.html  dsu_documentation.qmd  fads-portfolio.html  fads-portfolio.qmd  git_branching_strategy.html  git_branching_strategy.md  index.html  index.qmd  integrate-data.html  project-specific-instructions.html  projects.html  projects.qmd  publish-data.html  pyproject.toml  requirements.txt  robots.txt  salmon-data-standards.html  search.json  (+8 more)
.githooks/: pre-commit
_site/: search.json
agent-config/: PLANS.html  env-deployment-context.html  mcp-policy.html  memory-policy.html  project-context.html  security-context.html
blog/: from-data-stewardship-to-data-practice.html  from-data-stewardship-to-data-practice.qmd  index.html  index.qmd
cookbook/: cu-composite-escapement-estimates.html  cu-composite-escapement-estimates.qmd  index.html  index.qmd
data/: top_articles.json
data-standards/: vocab-index.html  vocab-index.qmd
data_standards/: data_dictionary_template_updated.xlsx  spsr-vocab-browser.html  spsr-vocab-browser.qmd  vocab-index.html  vocab-index.qmd  ~$data_dictionary_template_updated.xlsx
deep_dives/: results-network-graph.html  (+4 more)
fr/: about.html  (+5 more)
(+266 files in other folders)
